# rfx-solver

./: pyproject.toml
src/milp_solver/: SupplierScoringRule.json  __init__.py  scenario.py  scoring.py
